[package]
edition = "2021"
name = "atcodersearch"
version = "0.1.0"

[dependencies]
anyhow = "1.0.86"
chrono = {version = "0.4.38", features = ["serde"]}
clap = {version = "4.5.16", features = ["derive", "env"]}
itertools = "0.13.0"
regex = "1.10.6"
reqwest = { version = "0.12.7", features = ["rustls-tls", "cookies", "gzip", "json", "stream"] }
scraper = "0.20.0"
serde = {version = "1.0.209", features = ["derive"]}
serde_json = "1.0.127"
serde_with = "3.9.0"
sqlx = {version = "0.8.1", features = ["postgres", "chrono", "runtime-tokio-rustls"]}
tokio = {version = "1.39.3", features = ["full"]}
tokio-macros = "2.4.0"
tokio-stream = "0.1.15"
tokio-util = "0.7.11"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
rstest = "0.22.0"
