[package]
edition = "2021"
name = "atcodersearch-backend"
version = "0.1.0"

[dependencies]
anyhow = "1"
chrono = {version = "0.4", features = ["serde"]}
clap = {version = "4", features = ["derive", "env"]}
futures = "0.3"
itertools = "0.13"
meilisearch-sdk = "0.27"
prost = "0.13"
regex = "1"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
sqlx = {version = "0.8", features = ["postgres", "chrono", "runtime-tokio-rustls"]}
tokio = {version = "1", features = ["full", "macros", "rt-multi-thread"]}
tokio-macros = "2.4"
tokio-stream = "0.1"
tokio-util = "0.7"
tonic = "0.12"
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter", "fmt", "std", "json", "local-time", "time"]}

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
rstest = "0.22"
testcontainers = "0.22"
