[package]
edition = "2021"
name = "crawler"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0"
chrono = "^0.4"
dotenvy = "^0.15"
env_logger = "0.10.0"
minify-html = "0.10.3"
regex = "1.7.0"
reqwest = {version = "0.11.13", features = ["blocking", "json", "gzip"]}
serde = "1.0.148"
serde_json = "1.0.89"
serde_qs = "0.10.1"
serde_urlencoded = "0.7.1"
sqlx = {version = "^0.6", features = ["postgres", "chrono", "runtime-actix-rustls"]}
tokio = {version = "1.23", features = ["full"]}
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
