[package]
edition = "2021"
name = "indexer"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0"
chrono = {version = "^0.4", features = ["serde"]}
chrono-tz = "0.8.1"
crawler = {path = "../crawler", version = "0.1.0"}
dotenvy = "^0.15"
ego-tree = "0.6.2"
regex = "1.7.0"
reqwest = {version = "0.11.13", features = ["json"]}
scraper = "0.14.0"
serde = {version = "1.0.148", features = ["derive"]}
serde_json = "1.0.89"
serde_qs = "0.10.1"
serde_urlencoded = "0.7.1"
sqlx = {version = "^0.6", features = ["postgres", "chrono", "runtime-tokio-rustls"]}
tokio = {version = "1.23", features = ["full"]}
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
url = "2.3.1"
