[package]
edition = "2021"
name = "server"
version = "0.1.0"

[dependencies]
anyhow = "1.0.68"
axum = {version = "0.6.1", features = ["query"]}
chrono = {version = "0.4.23", features = ["serde", "std"]}
chrono-tz = "0.8.1"
dotenvy = "0.15.6"
http = "0.2.8"
http-body = "0.4.5"
hyper = {version = "0.14.23", features = ["full"]}
mime = "0.3.16"
serde = "1.0.152"
serde_json = "1.0.91"
serde_urlencoded = "0.7.1"
solr_client = {path = "../solr_client", version = "0.1.0"}
sqlx = {version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"]}
thiserror = "1.0.38"
tokio = {version = "1.23.0", features = ["full"]}
tower = "0.4.13"
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.16", features = ["env-filter"]}
validator = {version = "0.16.0", features = ["derive"]}
