[package]
edition = "2021"
name = "solr_client"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0"
chrono = {version = "^0.4", features = ["serde"]}
chrono-tz = "0.8.1"
futures = "0.3.25"
itertools = "0.10.5"
regex = "1.7.0"
reqwest = {version = "0.11.13", features = ["json"]}
serde = {version = "1.0.148", features = ["derive"]}
serde_json = "1.0.89"
serde_urlencoded = "0.7.1"
thiserror = "1.0.38"
tokio = {version = "1.23", features = ["full"]}
tokio-stream = "0.1.11"
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.16", features = ["env-filter"]}
url = "2.3.1"
