[package]
edition = "2021"
name = "server"
version = "0.1.0"

[dependencies]
anyhow = {version = "^1.0.68", features = ["backtrace"]}
axum = {version = "^0.6.1", features = ["query"]}
chrono = {version = "^0.4.23", features = ["serde", "std"]}
dotenvy = "^0.15.6"
http = "^0.2.8"
http-body = "^0.4.5"
hyper = {version = "^0.14.23", features = ["full"]}
itertools = "0.10.5"
mime = "^0.3.16"
once_cell = "^1.17.1"
percent-encoding = "2.2.0"
regex = "^1.7.1"
serde = "^1.0.152"
serde_json = "^1.0.91"
serde_qs = "^0.11.0"
serde_urlencoded = "^0.7.1"
serde_with = "^2.2.0"
solrust = "^0.1.0"
thiserror = "^1.0.38"
tokio = {version = "^1.23.0", features = ["full"]}
tower = "^0.4.13"
tower-http = {version = "^0.4.0", features = ["cors"]}
tracing = "^0.1.37"
tracing-appender = "^0.2.2"
tracing-subscriber = {version = "^0.3.16", features = ["env-filter", "fmt", "std", "local-time"]}
uuid = {version = "^1.3.0", features = ["v4"]}
validator = {version = "^0.16.0", features = ["derive"]}

[dev-dependencies]
reqwest = "0.11.14"
rstest = "0.16.0"
